--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_flutter: ^2.6.0
   google_maps_flutter_ios: ^2.5.0
   logger: ^2.0.2+1
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
